# schem_review

./: README.md  pyproject.toml
samples/: sample_design_review_20260411_203347.md  sample_design_review_20260411_203931.md  sample_design_review_20260411_211341.md  sample_design_review_20260411_211738.md  sample_design_review_20260411_212354.md  sample_design_review_20260411_214132.md  sample_design_review_20260411_214526.md  sample_design_review_20260411_221413.md  stm32_eth_test.xml
schem_review/: __init__.py  component_classifier.py  confidence.py  main.py  model.py  waivers.py
schem_review/checks/: __init__.py  drc.py  ee.py  ethernet.py  integrity.py  power.py  registry.py
schem_review/output/: __init__.py  json_writer.py  log_writer.py  md_writer.py
schem_review/parser/: __init__.py  hkp_parser.py  xml_parser.py
schem_review/ui/: __init__.py  app.py  check_picker.py  file_picker.py  results_view.py
