[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schem_review"
version = "0.1.0"
description = "Xpedition schematic review tool"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
schem_review = "schem_review.main:main"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[dependency-groups]
dev = ["ruff>=0.4"]
